--- a/css/index.css
+++ b/css/index.css
@@ -14,17 +14,27 @@ blockquote {
 }
 
 blockquote p {
-	font-size: 36px;
+	font-size: 28px;
 	line-height: 1.1;
 	font-weight: 500;
 	-webkit-transition: color .4s;
     transition: color .4s;
 }
+@media (min-width: 540px) {
+	blockquote p {
+		font-size: 36px;
+	}
+}
 
 blockquote footer {
-	font-size: 100%;
+	font-size: 80%;
 	-webkit-transition: color .4s;
     transition: color .4s;
+}
+@media (min-width: 540px) {
+	blockquote footer {
+		font-size: 100%;
+	}
 }
 
 .button-container {
